doc: add documentation for Show Openings
